--- a/Panda-2/src/app/tabs/tabs.page.html
+++ b/Panda-2/src/app/tabs/tabs.page.html
@@ -1,28 +1,28 @@
-<ion-tabs >
+<ion-tabs class="centered-tabs">
 
   <ion-tab-bar slot="bottom">
 
     <ion-tab-button tab="imagenes">
-      <ion-icon aria-hidden="true" name="home"></ion-icon>
+      <mat-icon>home</mat-icon>
       <ion-label>Inicio</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="buscar">
-      <ion-icon aria-hidden="true" name="search"></ion-icon>
+      <mat-icon>search</mat-icon>
       <ion-label>Buscar</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="anadir-imagen">
-      <ion-icon aria-hidden="true" name="add-circle" style="font-size: 100px;"></ion-icon>
+      <mat-icon >add_circle</mat-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="chat">
-      <ion-icon aria-hidden="true" name="chatbubbles"></ion-icon>
+      <mat-icon>chat_bubble</mat-icon>
       <ion-label>Chat</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="notificaciones">
-      <ion-icon aria-hidden="true" name="notifications"></ion-icon>
+      <mat-icon>notifications</mat-icon>
       <ion-label>Notificaciones</ion-label>
     </ion-tab-button>
 
