--- a/Panda-2/src/app/tabs/tabs.page.scss
+++ b/Panda-2/src/app/tabs/tabs.page.scss
@@ -1,1 +1,8 @@
-
+.centered-tabs .tab-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  
