--- a/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
+++ b/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
@@ -5,14 +5,24 @@
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>{{ imagen?.titulo }}</ion-card-title>
-      <ion-card-subtitle>Por: {{ imagen?.autor }}</ion-card-subtitle>
-    </ion-card-header>
-    
-    <ion-card-content>
-      <ion-img [src]="imagen?.imagenURL" alt="{{ imagen?.titulo }}"></ion-img>
-    </ion-card-content>
-  </ion-card>
+
+  <mat-card class="example-card">
+      
+        <img mat-card-image [src]="imagen?.imagenURL" alt="">
+      
+      <mat-card-header>
+        <mat-card-title>{{imagen?.titulo}}</mat-card-title>
+        <mat-card-subtitle>Por {{imagen?.autor}}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-actions>
+        <button mat-icon-button matTooltip="Warn" color="warn" aria-label="Example icon-button with a heart icon">
+          <mat-icon>favorite</mat-icon>
+        </button>
+        <button mat-icon-button color="black" aria-label="Example icon button with a bookmark icon">
+          <mat-icon>bookmark</mat-icon>
+        </button>
+      </mat-card-actions>
+  </mat-card>
+
 </ion-content>
+
