--- a/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
+++ b/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
@@ -13,7 +13,7 @@
       
         <img mat-card-image [src]="imagen?.imagenURL" alt="">
       
-      <mat-card-header>
+      <mat-card-header style="padding-left: 6px;">
         <mat-card-title>{{imagen?.titulo}}</mat-card-title>
         <mat-card-subtitle>Por {{imagen?.autor}}</mat-card-subtitle>
       </mat-card-header>
