--- a/Panda-2/src/app/tab1/tab1.page.html
+++ b/Panda-2/src/app/tab1/tab1.page.html
@@ -8,9 +8,28 @@
 
 <ion-content [fullscreen]="true">
 
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+    <ion-fab-button>
+      <mat-icon>menu</mat-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+
+      <ion-fab-button>
+        <mat-icon>exit_to_app</mat-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <mat-icon>more_vert</mat-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <mat-icon>add_circle</mat-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+
   <ion-grid>
     <ion-row>
       <ion-col size="6" *ngFor="let imagen of imagenes">
+
         <mat-card class="example-card">
           <a [routerLink]="['/tabs/imagenes', imagen.id]">
             <img mat-card-image [src]="imagen.imagenURL" alt="">
@@ -20,11 +39,11 @@
               <mat-icon style="color: white;">more_vert</mat-icon>
             </button>
           </div>
-          <mat-card-header>
+          <mat-card-header class="custom-card-header">
             <mat-card-title>{{imagen.titulo}}</mat-card-title>
             <mat-card-subtitle>Por {{imagen.autor}}</mat-card-subtitle>
           </mat-card-header>
-          <mat-card-actions>
+          <mat-card-actions class="custom-card-actions">
             <button mat-icon-button matTooltip="Warn" color="warn" aria-label="Example icon-button with a heart icon">
               <mat-icon>favorite</mat-icon>
             </button>
@@ -33,6 +52,7 @@
             </button>
           </mat-card-actions>
         </mat-card>
+        
       </ion-col>
     </ion-row>
   </ion-grid>
