--- a/Panda-2/src/app/tab1/tab1.page.html
+++ b/Panda-2/src/app/tab1/tab1.page.html
@@ -23,6 +23,9 @@
       <ion-fab-button>
         <mat-icon>add_circle</mat-icon>
       </ion-fab-button>
+      <ion-fab-button [routerLink]="['/perfil']">
+        <mat-icon>person</mat-icon>
+      </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
 
