--- a/Panda-2/src/app/opciones/opciones.page.html
+++ b/Panda-2/src/app/opciones/opciones.page.html
@@ -1,13 +1,34 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Opciones</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tabs/imagenes"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Opciones de Configuración</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Opciones</ion-title>
+      <ion-title size="large">Opciones de Configuración</ion-title>
     </ion-toolbar>
   </ion-header>
+  
+  <ion-list lines="full">
+    <ion-item>
+      <ion-icon slot="start" name="lock-closed"></ion-icon>
+      <ion-label>Privacidad</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon slot="start" name="shield-checkmark"></ion-icon>
+      <ion-label>Seguridad</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon slot="start" name="moon"></ion-icon>
+      <ion-label>Modo Oscuro</ion-label>
+      <ion-toggle slot="end"></ion-toggle>
+    </ion-item>
+    
+    <!-- Agrega más opciones de configuración aquí si es necesario -->
+  </ion-list>
 </ion-content>
