--- a/Panda-2/src/app/perfil/perfil.page.html
+++ b/Panda-2/src/app/perfil/perfil.page.html
@@ -3,6 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/tabs/imagenes"></ion-back-button>
     </ion-buttons>
+    <ion-title>Perfil</ion-title>
   </ion-toolbar>
 </ion-header>
  
