--- a/Panda-2/src/app/tab1/tab1.page.html
+++ b/Panda-2/src/app/tab1/tab1.page.html
@@ -14,11 +14,11 @@
     </ion-fab-button>
     <ion-fab-list side="top">
 
-      <ion-fab-button>
+      <ion-fab-button [routerLink]="['/login']">
         <mat-icon>exit_to_app</mat-icon>
       </ion-fab-button>
-      <ion-fab-button>
-        <mat-icon>more_vert</mat-icon>
+      <ion-fab-button [routerLink]="['/opciones']">
+        <mat-icon>settings</mat-icon>
       </ion-fab-button>
       <ion-fab-button>
         <mat-icon>add_circle</mat-icon>
