--- a/Panda-2/src/app/login/login.page.html
+++ b/Panda-2/src/app/login/login.page.html
@@ -1,20 +1,8 @@
-<ion-header [translucent]="true">
-
-</ion-header>
+<ion-header [translucent]="true"></ion-header>
 
 <ion-content [fullscreen]="true" class="ion-text-center">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <br />
-
-  <ion-title size="large" class="ion-padding">Panda Shoot</ion-title>
-
-  <br />
-
+  <form >
   <ion-item class="ion-margin">
     <ion-label position="floating">Correo electrónico</ion-label>
     <ion-input placeholder="Ingresa tu correo electrónico"></ion-input>
@@ -26,11 +14,11 @@
   </ion-item>
 
   <ion-button shape="round" expand="full" class="ion-margin" [routerLink]="['/tabs/imagenes']">Iniciar sesión</ion-button>
+  </form>
 
   <p class="ion-margin">
     <a href="#">¿Olvidaste tu contraseña?</a>
   </p>
-
   <br/>
 
   <ion-button shape="round" expand="full" class="ion-margin" [routerLink]="['/register']">Crear cuenta</ion-button>
