--- a/Panda-2/src/app/register/register.page.html
+++ b/Panda-2/src/app/register/register.page.html
@@ -1,40 +1,35 @@
 <ion-header [translucent]="true"></ion-header>
 
 <ion-content [fullscreen]="true" class="ion-text-center">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <br />
-
-  <ion-title size="large" class="ion-padding">Registro</ion-title>
-
-  <br />
-
+  
+  <form (ngSubmit)="registerUser()">
+  
   <ion-item class="ion-margin">
     <ion-label position="floating">Usuario</ion-label>
-    <ion-input placeholder="Ingresa tu nombre de Usuario"></ion-input>
+    <ion-input placeholder="Ingresa tu nombre de Usuario" [(ngModel)]="user.username" name="username" required></ion-input>
   </ion-item>
 
   <ion-item class="ion-margin">
     <ion-label position="floating">Correo electrónico</ion-label>
-    <ion-input placeholder="Ingresa tu correo electrónico"></ion-input>
+    <ion-input placeholder="Ingresa tu correo electrónico" [(ngModel)]="user.email" name="email" required></ion-input>
   </ion-item>
 
   <ion-item class="ion-margin">
     <ion-label position="floating">Contraseña</ion-label>
-    <ion-input type="password" placeholder="Ingresa tu contraseña"></ion-input>
+    <ion-input type="password" placeholder="Ingresa tu contraseña" [(ngModel)]="user.contrasena" name="contrasena" required></ion-input>
   </ion-item>
 
   <ion-item class="ion-margin">
     <ion-label position="floating">Confirmar contraseña</ion-label>
-    <ion-input type="password" placeholder="Ingresa tu contraseña"></ion-input>
+    <ion-input type="password" placeholder="Ingresa tu contraseña" [(ngModel)]="confirmContrasena" name="confirmContrasena" required></ion-input>
   </ion-item>
+  <ion-button class="ion-margin" shape="round" type="submit">Registrar cuenta</ion-button>
+  
+  </form>
 
   <div class="ion-float-center ion-margin">
     <ion-button class="ion-margin" shape="round" [routerLink]="['/login']">Volver al inicio</ion-button>
-    <ion-button class="ion-margin" shape="round" [routerLink]="['/tabs/imagenes']">Registrar cuenta</ion-button>
   </div>
+  
+
 </ion-content>
