--- a/Panda-2/src/app/tab1/tab1.page.html
+++ b/Panda-2/src/app/tab1/tab1.page.html
@@ -14,16 +14,16 @@
     </ion-fab-button>
     <ion-fab-list side="top">
 
-      <ion-fab-button [routerLink]="['/login']">
+      <ion-fab-button [routerLink]="['/login']" *ngIf="usuarioLogueado;">
         <mat-icon>exit_to_app</mat-icon>
       </ion-fab-button>
       <ion-fab-button [routerLink]="['/opciones']">
         <mat-icon>settings</mat-icon>
       </ion-fab-button>
-      <ion-fab-button>
-        <mat-icon>add_circle</mat-icon>
+      <ion-fab-button *ngIf="usuarioLogueado;">
+        <mat-icon [routerLink]="['/tabs/imagenes/agregar-imagen']">add_circle</mat-icon>
       </ion-fab-button>
-      <ion-fab-button [routerLink]="['/perfil']">
+      <ion-fab-button [routerLink]="['/perfil']" *ngIf="usuarioLogueado;">
         <mat-icon>person</mat-icon>
       </ion-fab-button>
     </ion-fab-list>
