Agregar imagen funcionando

--- a/Panda-2/src/app/tab1/agregar-imagen/agregar-imagen.page.html
+++ b/Panda-2/src/app/tab1/agregar-imagen/agregar-imagen.page.html
@@ -8,12 +8,12 @@
   <form (ngSubmit)="guardarNuevaImagen()">
     <ion-item class="ion-margin">
       <ion-label position="floating">Titulo</ion-label>
-      <ion-input placeholder="Ingresa el titulo de la imagen" [(ngModel)]="img.titulo" required></ion-input>
+      <ion-input placeholder="Ingresa el titulo de la imagen" [(ngModel)]="img.titulo"  name="titulo" required></ion-input>
     </ion-item>
 
     <ion-item class="ion-margin">
       <ion-label position="floating">Link</ion-label>
-      <ion-input placeholder="Ingresa el link de la imagen" [(ngModel)]="img.link" required></ion-input>
+      <ion-input placeholder="Ingresa el link de la imagen" [(ngModel)]="img.link" name="link" required ></ion-input>
     </ion-item>
     
     <ion-button class="ion-margin" shape="round" type="submit">
