--- a/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
+++ b/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
@@ -1,11 +1,16 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{ imagen?.titulo }}</ion-title>
     <ion-buttons slot="start">
-      <ion-back-button text="Volver"></ion-back-button>
+      <ion-back-button text="Volver" defaultHref="/tabs/imagenes"></ion-back-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button (click)="deleteImagen()">
+        <ion-icon name="trash"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content>
 
@@ -24,9 +29,27 @@
         <button mat-icon-button color="black" aria-label="Example icon button with a bookmark icon">
           <mat-icon>bookmark</mat-icon>
         </button>
-        <button mat-icon-button color="black" aria-label="Example icon button with a bookmark icon">
+        
+        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
           <mat-icon>more_vert</mat-icon>
         </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item>
+            <mat-icon>dialpad</mat-icon>
+            <span>Redial</span>
+          </button>
+          <button mat-menu-item disabled>
+            <mat-icon>voicemail</mat-icon>
+            <span>Check voice mail</span>
+          </button>
+          <button mat-menu-item>
+            <mat-icon>notifications_off</mat-icon>
+            <span>Disable alerts</span>
+          </button>
+        </mat-menu>
+        
+        
+
       </mat-card-actions>
   </mat-card>
 
