Alerta de borrar

--- a/Panda-2/src/app/tab1/agregar-imagen/agregar-imagen.page.html
+++ b/Panda-2/src/app/tab1/agregar-imagen/agregar-imagen.page.html
@@ -16,9 +16,9 @@
       <ion-input placeholder="Ingresa el link de la imagen" [(ngModel)]="img.link" name="link" required ></ion-input>
     </ion-item>
     
-    <ion-button class="ion-margin" shape="round" type="submit">
-      <mat-icon>save</mat-icon>
-    </ion-button>
+    
+    <ion-button id="open-toast" expand="block" type="submit"><mat-icon>save</mat-icon> </ion-button>
+      <ion-toast trigger="open-toast" message="Imagen ha sido guardada correctamente " [duration]="5000"></ion-toast>
   </form>
 </ion-content>
 
