--- a/Panda-2/src/app/opciones/opciones.page.html
+++ b/Panda-2/src/app/opciones/opciones.page.html
@@ -3,14 +3,14 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/tabs/imagenes"></ion-back-button>
     </ion-buttons>
-    <ion-title>Opciones de Configuración</ion-title>
+    <ion-title>Configuración</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Opciones de Configuración</ion-title>
+      <ion-title size="large">Configuración</ion-title>
     </ion-toolbar>
   </ion-header>
   
