--- a/Panda-2/src/app/perfil/perfil.page.html
+++ b/Panda-2/src/app/perfil/perfil.page.html
@@ -30,7 +30,7 @@
     </div>
     <ion-row class="profile-button-row">
       <ion-col class="ion-text-center">
-        <ion-button expand="full" color="primary" shape="round">Modificar perfil</ion-button>
+        <ion-button expand="full" color="primary" shape="round" [routerLink]=""> Modificar perfil</ion-button>
       </ion-col>
     </ion-row>
   </ion-card>
