validacion de formularios

--- a/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
+++ b/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
@@ -16,32 +16,32 @@
 
   <mat-card class="example-card">
       
-        <img mat-card-image [src]="imagen?.imagenURL" alt="">
+    <img mat-card-image [src]="imagen?.imagenURL" alt="">
+    <mat-card-header style="padding-left: 6px;">
+      <mat-card-title>{{imagen?.titulo}}</mat-card-title>
+      <mat-card-subtitle>Por {{imagen?.autor}}</mat-card-subtitle>
+    </mat-card-header>
+    
+    <mat-card-actions>
       
-      <mat-card-header style="padding-left: 6px;">
-        <mat-card-title>{{imagen?.titulo}}</mat-card-title>
-        <mat-card-subtitle>Por {{imagen?.autor}}</mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-actions>
-        <button mat-icon-button matTooltip="Warn" color="warn" aria-label="Example icon-button with a heart icon">
-          <mat-icon>favorite</mat-icon>
-        </button>
-        <button mat-icon-button color="black" aria-label="Example icon button with a bookmark icon">
-          <mat-icon>bookmark</mat-icon>
-        </button>
-        
-        <button mat-icon-button color="black" aria-label="Example icon button with a bookmark icon"> 
-        <mat-icon>share</mat-icon>
-        </button>
-        <button mat-icon-button color="black" aria-label="Example icon button with a bookmark icon">
-        <mat-icon>save_alt</mat-icon>
-       </button>
+      <button mat-icon-button matTooltip="Warn" color="warn">
+        <mat-icon>favorite</mat-icon>
+      </button>
 
+      <button mat-icon-button color="black">
+        <mat-icon>bookmark</mat-icon>
+      </button>
 
-        
-        
+      <button mat-icon-button color="black"> 
+      <mat-icon>share</mat-icon>
+      </button>
 
-      </mat-card-actions>
+      <button mat-icon-button color="black">
+      <mat-icon>save_alt</mat-icon>
+      </button> 
+
+    </mat-card-actions>
+
   </mat-card>
 
 </ion-content>
