--- a/Panda-2/src/app/login/login.page.html
+++ b/Panda-2/src/app/login/login.page.html
@@ -12,6 +12,7 @@
     <ion-label position="floating">Contraseña</ion-label>
     <ion-input type="password" placeholder="Ingresa tu contraseña" [(ngModel)]="user.contrasena" name="contrasena"></ion-input>
   </ion-item>
+  <div class="error-message" *ngIf="loginError">Usuario no existe o las credenciales son incorrectas</div>
 
   <ion-button shape="round" expand="full" class="ion-margin" type="submit">Iniciar sesión</ion-button>
   </form>
