--- a/Panda-2/src/app/tab1/agregar-imagen/agregar-imagen.page.html
+++ b/Panda-2/src/app/tab1/agregar-imagen/agregar-imagen.page.html
@@ -10,15 +10,16 @@
       <ion-label position="floating">Titulo</ion-label>
       <ion-input placeholder="Ingresa el titulo de la imagen" [(ngModel)]="img.titulo"  name="titulo" required></ion-input>
     </ion-item>
+    <div class="error-message" *ngIf="tituloError" style="padding-left: 20px;">El titulo debe tener al menos 3 caracteres</div>
 
     <ion-item class="ion-margin">
       <ion-label position="floating">Link</ion-label>
       <ion-input placeholder="Ingresa el link de la imagen" [(ngModel)]="img.link" name="link" required ></ion-input>
     </ion-item>
-    
+    <div class="error-message" *ngIf="linkError" style="padding-left: 20px;">El texto tiene que ser un link</div>
     
     <ion-button id="open-toast" expand="block" type="submit"><mat-icon>save</mat-icon> </ion-button>
-      <ion-toast trigger="open-toast" message="Imagen ha sido guardada correctamente " [duration]="5000"></ion-toast>
+      <ion-toast trigger="open-toast" message="Imagen ha sido guardada correctamente" [duration]="5000" *ngIf="imagenGuardadaToast"></ion-toast>
   </form>
 </ion-content>
 
