--- a/Panda-2/src/app/tab1/tab1.page.html
+++ b/Panda-2/src/app/tab1/tab1.page.html
@@ -13,7 +13,7 @@
       <mat-icon>menu</mat-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <ion-fab-button [routerLink]="['/login']" *ngIf="usuarioLogueado;">
+      <ion-fab-button (click)="cerrarSesion();" *ngIf="usuarioLogueado;">
         <mat-icon>exit_to_app</mat-icon>
       </ion-fab-button>
       <ion-fab-button [routerLink]="['/opciones']">
@@ -22,7 +22,7 @@
       <ion-fab-button *ngIf="usuarioLogueado;">
         <mat-icon [routerLink]="['/tabs/imagenes/agregar-imagen']">add_circle</mat-icon>
       </ion-fab-button>
-      <ion-fab-button (click)="cerrarSesion();" *ngIf="usuarioLogueado;">
+      <ion-fab-button [routerLink]="['/perfil']">
         <mat-icon>person</mat-icon>
       </ion-fab-button>
     </ion-fab-list>
