--- a/Panda-2/src/app/login/login.page.html
+++ b/Panda-2/src/app/login/login.page.html
@@ -3,24 +3,25 @@
 <ion-content [fullscreen]="true" class="ion-text-center">
 
   <form (submit)="loginUser()">
-  <ion-item class="ion-margin">
-    <ion-label position="floating">Correo electrónico</ion-label>
-    <ion-input placeholder="Ingresa tu correo electrónico" [(ngModel)]="user.email" name="email"></ion-input>
-  </ion-item>
+    <ion-item class="ion-margin">
+      <ion-label position="floating">Correo electrónico</ion-label>
+      <ion-input placeholder="Ingresa tu correo electrónico" [(ngModel)]="user.email" name="email"></ion-input>
+    </ion-item>
 
-  <ion-item class="ion-margin">
-    <ion-label position="floating">Contraseña</ion-label>
-    <ion-input type="password" placeholder="Ingresa tu contraseña" [(ngModel)]="user.contrasena" name="contrasena"></ion-input>
-  </ion-item>
-  <div class="error-message" *ngIf="loginError">Usuario no existe o las credenciales son incorrectas</div>
+    <ion-item class="ion-margin">
+      <ion-label position="floating">Contraseña</ion-label>
+      <ion-input type="password" placeholder="Ingresa tu contraseña" [(ngModel)]="user.contrasena"
+        name="contrasena"></ion-input>
+    </ion-item>
+    <div class="error-message" *ngIf="loginError">Usuario no existe o las credenciales son incorrectas</div>
 
-  <ion-button shape="round" expand="full" class="ion-margin" type="submit">Iniciar sesión</ion-button>
+    <ion-button shape="round" expand="full" class="ion-margin" type="submit">Iniciar sesión</ion-button>
   </form>
 
   <p class="ion-margin">
-    <a href="#">¿Olvidaste tu contraseña?</a>
+    <ion-button shape="round" [routerLink]="['/recuperacion']">¿Olvidaste contraseña? </ion-button>
   </p>
-  <br/>
+  <br />
 
   <ion-button shape="round" expand="full" class="ion-margin" [routerLink]="['/register']">Crear cuenta</ion-button>
 </ion-content>
