Arreglo-detalle-imagen

--- a/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
+++ b/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
@@ -6,6 +6,7 @@
     <ion-buttons slot="end">
       <ion-button (click)="deleteImagen()">
         <ion-icon name="trash"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
