--- a/Panda-2/src/app/login/login.page.html
+++ b/Panda-2/src/app/login/login.page.html
@@ -1,23 +1,27 @@
-<ion-header [translucent]="true"></ion-header>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title class="ion-text-center">Inicio sesión</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content [fullscreen]="true" class="ion-text-center">
-
-  <form (submit)="loginUser()">
-    <ion-item class="ion-margin">
-      <ion-label position="floating">Correo electrónico</ion-label>
-      <ion-input placeholder="Ingresa tu correo electrónico" [(ngModel)]="user.email" name="email"></ion-input>
-    </ion-item>
-
-    <ion-item class="ion-margin">
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input type="password" placeholder="Ingresa tu contraseña" [(ngModel)]="user.contrasena"
-        name="contrasena"></ion-input>
-    </ion-item>
-    <div class="error-message" *ngIf="loginError">Usuario no existe o las credenciales son incorrectas</div>
-
-    <ion-button shape="round" expand="full" class="ion-margin" type="submit">Iniciar sesión</ion-button>
-  </form>
-
-
-  <ion-button shape="round" expand="full" class="ion-margin" [routerLink]="['/register']">Crear cuenta</ion-button>
+  <ion-grid>
+    <ion-row class="ion-justify-content-center ion-align-items-center">
+      <ion-col size-md="6" size-lg="4">
+        <form (submit)="loginUser()">
+          <ion-item class="ion-margin">
+            <ion-label position="floating">Correo electrónico</ion-label>
+            <ion-input placeholder="Ingresa tu correo electrónico" [(ngModel)]="user.email" name="email"></ion-input>
+          </ion-item>
+          <ion-item class="ion-margin">
+            <ion-label position="floating">Contraseña</ion-label>
+            <ion-input type="password" placeholder="Ingresa tu contraseña" [(ngModel)]="user.contrasena" name="contrasena"></ion-input>
+          </ion-item>
+          <div class="error-message" *ngIf="loginError">Usuario no existe o las credenciales son incorrectas</div>
+          <ion-button shape="round" expand="full" class="ion-margin" type="submit">Iniciar sesión</ion-button>
+        </form>
+        <ion-button shape="round" expand="full" class="ion-margin" [routerLink]="['/register']">Crear cuenta</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
