--- a/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
+++ b/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
@@ -16,10 +16,10 @@
 
   <mat-card class="example-card">
 
-    <img mat-card-image [src]="imagen?.imagenURL" alt="">
+    <img mat-card-image [src]="imagen?.imagen" alt="">
     <mat-card-header style="padding-left: 6px;">
       <mat-card-title>{{imagen?.titulo}}</mat-card-title>
-      <mat-card-subtitle>Por {{imagen?.autor}}</mat-card-subtitle>
+      <mat-card-subtitle>Por </mat-card-subtitle>
     </mat-card-header>
 
     <mat-card-actions>
