--- a/Panda-2/src/app/tab1/tab1.page.html
+++ b/Panda-2/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Inicio
+      
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -29,6 +29,7 @@
   </ion-fab>
 
   <ion-grid>
+    <div class="image-container">
     <ion-row>
       <ion-col size="6" *ngFor="let imagen of imagenes">
 
@@ -52,6 +53,7 @@
         
       </ion-col>
     </ion-row>
+  </div>
   </ion-grid>
   
 </ion-content>
