--- a/Panda-2/src/theme/variables.scss
+++ b/Panda-2/src/theme/variables.scss
@@ -39,12 +39,12 @@ $app-theme: mat.define-light-theme((
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #f4a261;
+  --ion-color-primary-rgb: 244,162,97;
   --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-contrast-rgb: 0,0,0;
+  --ion-color-primary-shade: #d78f55;
+  --ion-color-primary-tint: #f5ab71;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
