--- a/Panda-2/src/app/bienvenida/bienvenida.page.html
+++ b/Panda-2/src/app/bienvenida/bienvenida.page.html
@@ -7,7 +7,7 @@
     <ion-img src="assets/ICONO/F8F0E5.png" class="logo"></ion-img>
     <h1 class="welcome-heading">¡Bienvenido a Panda Shot!</h1>
     <p class="welcome-text">Explora imágenes asombrosas capturadas por la comunidad, o comparte tus propias creaciones con el mundo.</p>
-    <ion-button expand="block" shape="round" class="custom-button" [routerLink]="['/login']">
+    <ion-button expand="block" shape="round" class="custom-button" [routerLink]="['/register']">
       Continuar
       <ion-icon name="arrow-forward-outline" slot="end"></ion-icon>
     </ion-button>
