--- a/Panda-2/src/app/perfil/perfil.page.scss
+++ b/Panda-2/src/app/perfil/perfil.page.scss
@@ -1,6 +1,30 @@
-.centered-title {
-    text-align: center;
-    width: 100%;
-    margin: 0 auto; 
-  }
-  
+.circular-image {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.square-button {
+  border-radius: 10px;
+  font-size: 14px;
+  width: auto;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.larger-text {
+  font-size: 20px;
+}
+
+.profile-details {
+  text-align: center;
+}
+
+.profile-picture-container {
+  display: flex;
+  justify-content: center;
+}
