--- a/Panda-2/src/app/register/register.page.html
+++ b/Panda-2/src/app/register/register.page.html
@@ -8,37 +8,82 @@
   <ion-grid>
     <ion-row class="ion-justify-content-center ion-align-items-center">
       <ion-col size-md="6" size-lg="4">
-        <form (ngSubmit)="registerUser()">
+
+        <form (ngSubmit)="registrarUsuario()">
           <ion-item class="ion-margin">
             <ion-label position="floating">Usuario</ion-label>
-            <ion-input placeholder="Ingresa tu nombre de Usuario" [(ngModel)]="user.username" name="username" required></ion-input>
+            <ion-input
+              placeholder="Ingresa tu nombre de Usuario"
+              name="nombre"
+              [(ngModel)]="nombre"
+              (input)="validarNombre()"
+              required
+            ></ion-input>
           </ion-item>
-          <div class="error-message" *ngIf="showUsernameError">El nombre de usuario ya está en uso</div>
-          <div class="error-message" *ngIf="showUsernameCaracteres">El nombre debe tener al menos 3 caracteres</div>
-
+          <div *ngIf="!nombreValido" class="error-message">El nombre debe tener al menos 3 caracteres.</div>
+          <div *ngIf="!nombreUsuarioValido" class="error-message">El nombre ya está registrado.</div>
+        
           <ion-item class="ion-margin">
             <ion-label position="floating">Correo electrónico</ion-label>
-            <ion-input placeholder="Ingresa tu correo electrónico" [(ngModel)]="user.email" name="email" required></ion-input>
+            <ion-input
+              placeholder="Ingresa tu correo electrónico"
+              name="correo"
+              [(ngModel)]="correo"
+              (input)="validarCorreo()"
+              required
+            ></ion-input>
           </ion-item>
-          <div class="error-message" *ngIf="showEmailError">El correo electrónico es invalido</div>
-          <div class="error-message" *ngIf="showEmailDuplicado">El correo electrónico ya está registrado</div>
-
+          <div *ngIf="!correoExiste" class="error-message">El correo electrónico ya está registrado.</div>
+          <div *ngIf="!correoValido" class="error-message">El correo electrónico no es válido.</div>
+        
           <ion-item class="ion-margin">
             <ion-label position="floating">Contraseña</ion-label>
-            <ion-input type="password" placeholder="Ingresa tu contraseña" [(ngModel)]="user.contrasena" name="contrasena" required></ion-input>
+            <ion-input
+              type="password"
+              placeholder="Ingresa tu contraseña"
+              name="contrasena"
+              [(ngModel)]="contrasena"
+              (input)="validarContrasena()"
+              required
+            ></ion-input>
           </ion-item>
-          <div class="error-message" *ngIf="showPasswordError">La contraseña debe tener al menos 8 caracteres y contener al menos un número.</div>
-
+          <div *ngIf="!contrasenaValida" class="error-message">La contraseña debe tener al menos 6 caracteres y contener al menos un número.</div>
+        
           <ion-item class="ion-margin">
             <ion-label position="floating">Confirmar contraseña</ion-label>
-            <ion-input type="password" placeholder="Ingresa tu contraseña" [(ngModel)]="confirmContrasena" name="confirmContrasena" required></ion-input>
+            <ion-input
+              type="password"
+              placeholder="Ingresa tu contraseña"
+              name="confirmContrasena"
+              [(ngModel)]="confirmarContrasena"
+              (input)="validarConfirmarContrasena()"
+              required
+            ></ion-input>
           </ion-item>
-          <div class="error-message" *ngIf="showConfirmPasswordError">Las contraseñas no coinciden</div>
+          <div *ngIf="!contrasenasCoinciden" class="error-message">Las contraseñas no coinciden.</div>
+        
+          <ion-item class="ion-margin">
+            <ion-label position="floating">Edad </ion-label>
+            <ion-input
+              type="number"
+              placeholder="Ingresa tu edad"
+              [(ngModel)]="edad"
+              name="edad"
+              (input)="validarEdad()"
+              required
+              maxlength="2"
+              ></ion-input>
+          </ion-item>
 
-          <ion-button class="ion-margin" shape="round" type="submit">Registrar cuenta</ion-button>
+          <div *ngIf="!edadValida" class="error-message">Debes tener almenos 16 años para registrarte</div>
+          
+          
+        
+          <ion-button class="ion-margin" type="submit">Registrar cuenta</ion-button>
         </form>
+        
 
-        <ion-button class="ion-margin" shape="round" [routerLink]="['/login']">Volver al inicio</ion-button>
+        <ion-button class="ion-margin" [routerLink]="['/login']">¿Ya tienes cuenta? Inicia sesión</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
