--- a/Panda-2/src/app/tab1/tab1.page.html
+++ b/Panda-2/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Inicio
+      Bienvenido {{nombreUsuario}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,7 +13,7 @@
       <mat-icon>menu</mat-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <ion-fab-button  *ngIf="usuarioLogueado;">
+      <ion-fab-button (click)="cerrarSesion();">
       <mat-icon>exit_to_app</mat-icon>
       </ion-fab-button>
       <ion-fab-button [routerLink]="['/opciones']">
@@ -22,33 +22,38 @@
       <ion-fab-button >
         <mat-icon [routerLink]="['/tabs/imagenes/agregar-imagen']">add_circle</mat-icon>
       </ion-fab-button>
-      <ion-fab-button *ngIf="usuarioLogueado;" [routerLink]="['/perfil']">
+      <ion-fab-button [routerLink]="['/perfil', idUsuario]">
         <mat-icon>person</mat-icon>
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
 
-  <ion-grid>
+  <ion-grid class="custom-grid">
     <ion-row>
-      <ion-col size="6" *ngFor="let imagen of imagenes">
+      <ion-col size="6" *ngFor="let imagen of imagenes" >
 
-        <mat-card class="example-card" >
+        <mat-card class="custom-card" >
           <a [routerLink]="['/tabs/imagenes', imagen.id]">
             <img mat-card-image [src]="imagen.imagen" alt="">
           </a>
           <mat-card-header class="custom-card-header">
             <mat-card-title>{{imagen.titulo| titlecase}}</mat-card-title>
-            <mat-card-subtitle>Por </mat-card-subtitle>
+            <mat-card-subtitle>Por {{imagen.nombre_usuario}}</mat-card-subtitle>
           </mat-card-header>
           <mat-card-actions class="custom-card-actions">
-            <button mat-icon-button matTooltip="Warn" color="warn" aria-label="Example icon-button with a heart icon">
+            <button mat-icon-button matTooltip="Warn" color="warn" aria-label="Example icon-button with a heart icon" (click)="toggleLike(idUsuario,imagen.id)">
               <mat-icon>favorite</mat-icon>
+              
             </button>
+            {{imagen.cantidad_likes}}
+            
             <button mat-icon-button color="black" aria-label="Example icon button with a bookmark icon">
               <mat-icon>bookmark</mat-icon>
             </button>
           </mat-card-actions>
         </mat-card>
+
+        
         
       </ion-col>
     </ion-row>
