--- a/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
+++ b/Panda-2/src/app/tab1/imagen-detalle/imagen-detalle.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/tabs/imagenes"></ion-back-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
 
     <ion-buttons slot="end" *ngIf="idUsuario === imagen?.usuario_id || isAdmin === 1">
